deployment-ortelius-ms-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: ortelius
    meta.helm.sh/release-namespace: ortelius
  creationTimestamp: "2024-04-05T06:17:44Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: ms-nginx
  namespace: ortelius
  resourceVersion: "382011"
  uid: 18ad747d-d298-49b7-b139-ecb281d2988b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ms-nginx
      tier: frontend
      track: stable
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ms-nginx
        tier: frontend
        track: stable
    spec:
      containers:
      - env:
        - name: SSLTYPE
          value: "OFF"
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: quay.io/ortelius/ms-nginx:main-v10.0.284-gf1b80a
        imagePullPolicy: Always
        name: ms-nginx
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2024-04-05T06:18:16Z"
    lastUpdateTime: "2024-04-05T06:18:16Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2024-04-05T06:17:45Z"
    lastUpdateTime: "2024-04-05T06:18:16Z"
    message: ReplicaSet "ms-nginx-579b485d6c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
